# rust-llm-agent-platform

./: .env.example  .gitignore  Cargo.toml  README.md
crates/agent/: Cargo.toml
crates/agent/src/: lib.rs
crates/agent/tests/: tool_routing.rs
crates/api/: Cargo.toml
crates/api/src/: lib.rs  main.rs
crates/api/tests/: chat.rs  health.rs  runs.rs
crates/api/tests/common/: mod.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/model/: Cargo.toml
crates/model/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
docs/: adr-001-rig-and-ollama.md
migrations/: 20260429123000_create_agent_runs.sql
ops/docker/: Dockerfile  docker-compose.yml
