[package]
name = "api"
version = "0.1.0"
edition = "2024"

[lib]
name = "api"
path = "src/lib.rs"

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
agent = { path = "../agent" }
common = { path = "../common" }
model = { path = "../model" }
storage = { path = "../storage" }
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
async-trait.workspace = true
http-body-util = "0.1"
tempfile = "3"
tower = { workspace = true, features = ["util"] }
